--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,254 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  grid-area: nav;
+  height: 7.4vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2rem auto auto 2rem;
+      grid-template-columns: 2rem auto auto 2rem;
+      grid-template-areas: ". logo links .";
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 4;
+  background: #202020;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 768px) {
+  .nav {
+    -ms-grid-columns: 1em auto 1fr auto 1em;
+        grid-template-columns: 1em auto 1fr auto 1em;
+        grid-template-areas: ". logo . menu-icon .";
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav .logo {
+  cursor: pointer;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: logo;
+  height: 2rem;
+}
+
+.nav .nav-menu {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: links;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  position: relative;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.nav .nav-menu .nav-link {
+  cursor: pointer;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: .75rem;
+  color: #8E8E8E;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1.5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav .nav-menu .nav-link:hover {
+  color: #e7e7e7;
+}
+
+@media only screen and (max-width: 768px) {
+  .nav .nav-menu {
+    opacity: 0;
+    height: 70vh;
+    width: 100vw;
+    top: 0;
+    position: fixed;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 0;
+    padding: 100px 0;
+    left: -1000px;
+    background-color: #202020;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
   }
-  to {
-    transform: rotate(360deg);
+  .nav .nav-menu .nav-link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .nav .nav-menu .nav-link:hover {
+    border: none;
   }
 }
+
+.nav .active {
+  opacity: 1;
+  left: 0;
+  -webkit-transition: left .2s ease-in-out;
+  transition: left .2s ease-in-out;
+}
+
+.nav .menu-icon {
+  cursor: pointer;
+  z-index: 5;
+  display: none;
+  font-size: 1.5rem;
+  grid-area: menu-icon;
+  color: #e7e7e7;
+}
+
+@media only screen and (max-width: 768px) {
+  .nav .menu-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.bg {
+  background-image: url("https://pbs.twimg.com/media/EinRHgcWsAEfXXx.jpg");
+  background-position: center;
+  background-size: cover;
+  position: fixed;
+  background-repeat: no-repeat;
+  top: 7.4vh;
+  left: 0;
+  z-index: -1;
+  height: 100vh;
+  width: 100vw;
+}
+
+.home {
+  min-height: 100vh;
+  color: #e7e7e7;
+  background-color: rgba(0, 0, 0, 0.4321);
+}
+
+.featured {
+  min-height: 30vh;
+  padding: 1rem;
+  color: #000;
+  text-transform: uppercase;
+  background-color: #f1f1f1;
+}
+
+.featured h2 {
+  font-weight: 550;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 0 1rem 2rem 1rem;
+  overflow: hidden;
+}
+
+.featured h2 span {
+  position: relative;
+  display: inline-block;
+}
+
+.featured h2 span::before, .featured h2 span::after {
+  border-bottom: 1px solid #000;
+  border-top: 0 solid #000;
+  content: "";
+  height: 7px;
+  position: absolute;
+  top: 25%;
+  width: 1000px;
+}
+
+.featured h2 span::before {
+  right: 100%;
+  margin-right: 15px;
+}
+
+.featured h2 span::after {
+  left: 100%;
+  margin-left: 15px;
+}
+
+.featured .images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5rem;
+  overflow-x: hidden;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  min-height: 30vh;
+}
+
+.featured .images .img {
+  width: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+}
+
+.featured .images .img img {
+  height: 25rem;
+}
+
+.featured .images .img p {
+  text-align: center;
+  word-wrap: break-word;
+  font-size: .75rem;
+}
+/*# sourceMappingURL=App.css.map */
