--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
 *{
     padding:0;
     margin:0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
 }
 .nav{
     height: 7.4vh;
@@ -95,81 +95,234 @@
     }
 }
 
-.bg{
-    background-image: url('https://pbs.twimg.com/media/EinRHgcWsAEfXXx.jpg');
-    background-position: center;
-    background-size:cover;
-    position: fixed;
-    background-repeat: no-repeat;
-    top:7.4vh;
-    left:0;
-    z-index: -1;
-    height: 100vh;
-    width: 100vw;
-}
+
 .home{
-    min-height: 100vh;  
     color:#e7e7e7;
-    background-color: rgba(0, 0, 0, 0.4321);
-}
-.featured{
-    min-height: 30vh;  
-    padding:1rem;
-    color:#000;
-    text-transform: uppercase;
-    background-color: #f1f1f1;
-    h2{
-        font-weight: 550;
-        text-align: center;
-        font-size: 1.2rem;
-        padding:0 1rem 2rem 1rem;
-        overflow: hidden;
-        span{
-            position: relative;
-            display: inline-block;            
-            &::before, &::after{
-                border-bottom:1px solid #000;
-                border-top:0 solid #000;
-                content:"";
-                height:7px;
-                position:absolute;
-                top:25%;
-                width:1000px;
+    .bg{
+        height: 65vh;
+        background-image: url('https://pbs.twimg.com/media/EinRHgcWsAEfXXx.jpg');
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;   
+        background-repeat: no-repeat;
+    }
+    .featured{
+        min-height: 30vh; 
+        padding:1rem .5rem;
+        color:#000;
+        text-transform: uppercase;
+        background-color: #f1f1f1;        
+        h2{
+            font-weight: 550;
+            text-align: center;
+            font-size: 1.2rem;
+            padding:0 1rem 2rem 1rem;
+            overflow: hidden;
+            span{
+                position: relative;
+                display: inline-block;            
+                &::before, &::after{
+                    border-bottom:1px solid #000;
+                    border-top:0 solid #000;
+                    content:"";
+                    height:7px;
+                    position:absolute;
+                    top:25%;
+                    width:1000px;
+                }
+                &::before{
+                    right:100%;
+                    margin-right:15px;
+                }
+                &::after{
+                    left:100%;
+                    margin-left:15px;
+                }
             }
-            &::before{
-                right:100%;
-                margin-right:15px;
-            }
-            &::after{
-                left:100%;
-                margin-left:15px;
+        }
+        .images{
+            display: flex;
+            gap:5rem;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 30vh;
+            &::-webkit-scrollbar {
+                width: 0px;
+              }
+              &::-webkit-scrollbar-track {
+                background: #f1f1f1; 
+              }
+              &::-webkit-scrollbar-thumb {
+                background: #9c9c9cc0;
+              }
+              &::-webkit-scrollbar-thumb:hover {
+                background: #9c9c9c;
+              }
+               
+              
+            @media only screen and (max-width:1160px) {
+                justify-content: flex-start;
+            }  
+            .img{
+                width: 10rem;      
+                display: flex;
+                flex-direction: column;      
+                justify-content: center;
+                align-items: center;
+                gap:1rem;  
+                margin:0 0 1rem 0;
+                img{
+                    height: 25rem;
+                }
+                p{
+                    text-align: center;
+                    word-wrap: break-word;
+                    font-size: .75rem;
+                }
             }
         }
     }
-    .images{
-        display: flex;
-        gap:5rem;
+}
+.guitars{
+    min-height: 100vh;
+    .bg{        
+        height: 40vh;
+        background-image: url('https://images.ctfassets.net/4jcppgetbqrc/6k2U3nRBIcq8iM6QCAUksa/d120abf8a175da787ce1913e89960a26/CS-Dinky-Coral-Sea.jpg');
+        background-position: 0 -250px;
+        background-attachment: fixed;
+        position: relative;
+        &::before{
+            content: "";
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        &::after{
+            content: "Gitáraink";
+            position: absolute;
+            left:50%;
+            top:50%;
+            transform:translate(-50%, -50%);
+            color:#f1f1f1;
+            font-size: 3rem;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+    }
+    .guitars-container{
+        min-height: 100vh;
+        background: #020202;
+        display: flex; 
         justify-content: center;
-        align-items: flex-start;
-        min-height: 30vh;
-        @media only screen and (max-width:1160px) {
-            justify-content: flex-start;
-        }  
-        .img{
-            width: 10rem;      
+        align-items: center;
+        gap:2rem;   
+        .guitar{
+            height: 26rem;
+            width: 26rem;
+            background-attachment: fixed;
             display: flex;
-            flex-direction: column;      
-            justify-content: center;
-            align-items: center;
-            gap:1rem;  
-            img{
-                height: 25rem;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;    
+            overflow: hidden;  
+            text-align: center;
+            cursor: pointer;
+            background: rgb(26,16,31);
+            background: linear-gradient(106deg, rgba(26,16,31,1) 0%, rgba(23,24,40,1) 60%, rgba(23,23,39,1) 87%, rgba(23,22,38,1) 97%);
+            &:hover .img img{
+                width: 7.5rem;
+                transform:rotate(45deg);
+                transition: all .3s ease-in-out;
             }
-            p{
-                text-align: center;
-                word-wrap: break-word;
-                font-size: .75rem;
+            .img{
+                img{
+                    width: 15rem;
+                    transition: all .3s ease-in-out;
+                }
             }
+            .name{
+                color:#fff;
+                min-height: 7vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                line-height: 20px;
+                font-size: .85rem;  
+                background: #020202;
+            }
+        }
+    }
+}
+.footer{
+    .top{
+        background: #202020;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding:4rem 0;
+        gap:2rem;
+        form{
+            position: relative;
+            min-width: 65vw;
+            height: 7vh;
+            display: flex;
+            justify-content: space-between;
+            background: #fff;
+            padding:.1rem;
+            @media only screen and (max-width:580px){
+                min-width: 90vw;
+            }
+            input{
+                flex: 2;
+                color:#7A8AB0;
+                height: 100%;
+                padding: 0 0 0 1rem;
+                text-transform: uppercase;
+                letter-spacing: 1.5px;
+                border:none;
+                &:focus{
+                    outline: none;
+                }
+            }
+            button{
+                background-color: #000;
+                color:#f1f1f1;
+                font-size: 1.15rem;
+                outline:none;
+                border:none;
+                min-width: 2rem;
+                cursor: pointer;
+                padding:.5rem;
+            }
+        }
+        img{
+            height: clamp(3rem, 6vw, 15rem);
+        }
+    }
+    .bottom{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding:0 1rem;
+        gap:1rem;
+        font-size: .75rem;
+        text-transform: uppercase;
+        color:#939393;
+        background-color: #000;
+        height: 7vh;
+        p::after{
+            content: "";
+            position: absolute;
+            height: .75rem;
+            margin:.15rem 0 0 .47rem;
+            width: 1px;
+            background-color: #939393;
+        }
+        p:last-child::after{
+            all:unset;
         }
     }
 }
