--- a/src/App.scss
+++ b/src/App.scss
@@ -257,6 +257,10 @@
         }
     }
 }
+.guitar-specs{
+    background-color: red;
+    min-height: 100vh;
+}
 .footer{
     .top{
         background: #202020;
