--- a/src/App.css
+++ b/src/App.css
@@ -384,8 +384,12 @@
 }
 
 .guitar-specs {
-  background-color: red;
+  background-color: rgba(0, 0, 0, 0.496);
   min-height: 100vh;
+}
+
+.guitar-specs h1 {
+  color: #f1f1f1;
 }
 
 .footer .top {
