--- a/src/App.scss
+++ b/src/App.scss
@@ -108,7 +108,7 @@
     }
     .featured{
         min-height: 30vh; 
-        padding:1rem .5rem;
+        padding:1rem;
         color:#000;
         text-transform: uppercase;
         background-color: #f1f1f1;  
@@ -194,6 +194,7 @@
     .bg{        
         height: 40vh;
         background-image: url('https://images.ctfassets.net/4jcppgetbqrc/6k2U3nRBIcq8iM6QCAUksa/d120abf8a175da787ce1913e89960a26/CS-Dinky-Coral-Sea.jpg');
+        filter:grayscale(100%);
         background-position: 0 -250px;
         background-attachment: fixed;
         position: relative;
@@ -202,16 +203,17 @@
             height: 100%;
             width: 100%;
             position: absolute;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.75);
         }
         &::after{
-            content: "Gitáraink";
+            content: "Gitárok";
             position: absolute;
             left:50%;
             top:50%;
             transform:translate(-50%, -50%);
             color:#f1f1f1;
             font-size: 3rem;
+            letter-spacing: 7px;
             font-weight: 700;
             text-transform: uppercase;
         }
@@ -225,7 +227,7 @@
         flex-wrap: wrap;
         gap:2rem;   
         a{text-decoration: none;}
-        padding:3rem 0;
+        padding:4rem 0;
         .guitar{
             height: 28rem;
             width: 26rem;
