--- a/src/App.scss
+++ b/src/App.scss
@@ -275,37 +275,55 @@
         color:#f1f1f1;
         display: grid;
         justify-content: center;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: .5fr auto auto;
         grid-template-areas:
-        "name"
-        "image"
+        "gName"
+        "gImage"
         "images"
         ;
-        padding: 1rem 6rem 10rem 6rem;
-        div{
-            grid-area: name;
+        padding:0 2rem;
+        div:first-child{
+            grid-area: gName;
             text-align: center;
-            margin: auto;
-            line-height:40px;
-            background-color:teal;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            font-size: clamp(.6rem, 2vw, 1rem);
         }
-        img{
-            grid-area: image;
-            width: clamp(15rem, 80vw, 80rem);
-            margin:auto;
-            background: yellow;
+        .big-img{
+            grid-area: gImage;
+            display: grid;
+            place-items: center;
+            background: #000;
+            img{
+                width: 90%;
+            }
         }
         .guitar-images{
             grid-area: images;
-            background-color: green;
+            text-align: center;
             display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+            align-items: center;
+            flex-wrap: nowrap;
             width: 100%;
+           background: #000;
+            &::-webkit-scrollbar {
+                width: 0px;
+              }
+              &::-webkit-scrollbar-track {
+                background: #f1f1f1; 
+              }
+              &::-webkit-scrollbar-thumb {
+                background: #9c9c9cc0;
+              }
+              &::-webkit-scrollbar-thumb:hover {
+                background: #9c9c9c;
+              }
             img{
-                height: 70px;
+                margin:0 30px 0 0;
+                height: 6vw;
                 width: auto;
-                background-color: red;
             }
         }
     }
