--- a/src/App.css
+++ b/src/App.css
@@ -404,21 +404,24 @@
   background: linear-gradient(to bottom, #0e0e0e 20%, #202020 50%, #f1f1f1 50%, #f1f1f1 100%);
   min-height: 100vh;
   color: #f1f1f1;
-  display: -ms-grid;
-  display: grid;
+  padding: 0 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-grid-rows: .5fr auto auto;
-      grid-template-rows: .5fr auto auto;
-      grid-template-areas: "gName" "gImage" "images";
-  padding: 0 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 3rem;
 }
 
-.guitar-specs .top div:first-child {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: gName;
+.guitar-specs .top .name-cost {
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -437,56 +440,67 @@
 }
 
 .guitar-specs .top .big-img {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: gImage;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  background: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .guitar-specs .top .big-img img {
-  width: 90%;
+  width: 80%;
 }
 
 .guitar-specs .top .guitar-images {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  grid-area: images;
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  width: 100%;
-  background: #000;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.guitar-specs .top .guitar-images::-webkit-scrollbar {
+.guitar-specs .top .guitar-images .scrollSoctainer {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.guitar-specs .top .guitar-images .scrollSoctainer::-webkit-scrollbar {
   width: 0px;
 }
 
-.guitar-specs .top .guitar-images::-webkit-scrollbar-track {
+.guitar-specs .top .guitar-images .scrollSoctainer::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
-.guitar-specs .top .guitar-images::-webkit-scrollbar-thumb {
+.guitar-specs .top .guitar-images .scrollSoctainer::-webkit-scrollbar-thumb {
   background: #9c9c9cc0;
 }
 
-.guitar-specs .top .guitar-images::-webkit-scrollbar-thumb:hover {
+.guitar-specs .top .guitar-images .scrollSoctainer::-webkit-scrollbar-thumb:hover {
   background: #9c9c9c;
 }
 
 .guitar-specs .top .guitar-images img {
   margin: 0 30px 0 0;
   height: 6vw;
-  width: auto;
+  width: 100%;
 }
 
 .footer .top {
