--- a/src/App.scss
+++ b/src/App.scss
@@ -327,7 +327,7 @@
         width: 100vw;
         height: 100vh;
         z-index: 4;
-        display: none;
+        display: grid;
         grid-template-rows: 1fr 1fr 1fr;
         gap: 1rem;
         .exit{
