--- a/src/App.css
+++ b/src/App.css
@@ -492,7 +492,8 @@
   width: 100vw;
   height: 100vh;
   z-index: 4;
-  display: none;
+  display: -ms-grid;
+  display: grid;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
   gap: 1rem;
