--- a/src/App.css
+++ b/src/App.css
@@ -526,7 +526,7 @@
 }
 
 .guitar-specs .full-screen-image .f-img img {
-  height: 70%;
+  width: 40%;
 }
 
 .guitar-specs .full-screen-image .arrows {
