--- a/src/App.scss
+++ b/src/App.scss
@@ -342,7 +342,7 @@
             justify-content: center;
             align-items: center;
             img{
-                height: 70%;
+                width: 40%;
             }
         }
         .arrows{
